Fix spacing on testimonial content

--- a/css/app.css
+++ b/css/app.css
@@ -142,10 +142,21 @@ margin-left: 30px;
   letter-spacing: .5px;
 }
 
+.testimonial-content:nth-child(1) {
+  margin-right: 40px;
+  margin-top: 60px;
+}
 
+.testimonial-content:nth-child(2) {
+  margin-right: 40px;
+  margin-top: 80px;
+}
+
+.testimonial-content:nth-child(3) {
+margin-top: 100px;
+}
 
 
 @media (max-width: 375px) {
   
-
 }
